add patches for v5.6.2

--- a/.github/workflows/test-cpanm.yml
+++ b/.github/workflows/test-cpanm.yml
@@ -40,4 +40,4 @@ jobs:
 
       - run: cpanm --help
       - run: cpanm --version
-      - run: cpanm ExtUtils::MakeMaker
+      - run: cpanm --notest ExtUtils::MakeMaker
