--- a/.github/workflows/test-cpanm.yml
+++ b/.github/workflows/test-cpanm.yml
@@ -19,8 +19,10 @@ jobs:
           - "5.8.1" # oldest version the original cpanm supports
           - "5.8.0"
           - "5.6.2"
-          - "5.6.1"
-          - "5.6.0" # oldest version the action supports
+          - "5.6.1" # oldest version the action supports
+
+          # too old to work cpanm... I gave up.
+          # - "5.6.0"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
