add --force option

--- a/.github/workflows/test-cpanm.yml
+++ b/.github/workflows/test-cpanm.yml
@@ -42,4 +42,4 @@ jobs:
 
       - run: cpanm --help
       - run: cpanm --version
-      - run: cpanm --notest ExtUtils::MakeMaker
+      - run: cpanm --notest --force ExtUtils::MakeMaker
