--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -65,7 +65,7 @@ jobs:
       - name: install OpenSSL
         run: |
           set -eux
-          OPENSSL_VERSION=1_1_1h
+          OPENSSL_VERSION=1_1_1i
           curl --retry 3 -sSL "https://github.com/openssl/openssl/archive/OpenSSL_$OPENSSL_VERSION.tar.gz" -o openssl.tar.gz
           tar xzf openssl.tar.gz
           cd "openssl-OpenSSL_$OPENSSL_VERSION"
@@ -166,7 +166,7 @@ jobs:
       - name: install OpenSSL
         run: |
           set -eux
-          OPENSSL_VERSION=1_1_1h
+          OPENSSL_VERSION=1_1_1i
           curl --retry 3 -sSL "https://github.com/openssl/openssl/archive/OpenSSL_$OPENSSL_VERSION.tar.gz" -o openssl.tar.gz
           tar xzf openssl.tar.gz
           cd "openssl-OpenSSL_$OPENSSL_VERSION"
