--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -63,15 +63,7 @@ jobs:
         with:
           install: make mingw-w64-x86_64-gcc nasm
       - name: install OpenSSL
-        run: |
-          set -eux
-          OPENSSL_VERSION=1_1_1i
-          curl --retry 3 -sSL "https://github.com/openssl/openssl/archive/OpenSSL_$OPENSSL_VERSION.tar.gz" -o openssl.tar.gz
-          tar xzf openssl.tar.gz
-          cd "openssl-OpenSSL_$OPENSSL_VERSION"
-          perl Configure --prefix="$(cygpath "$RUNNER_TOOL_CACHE\perl\${{ matrix.perl }}\x64")" mingw64
-          make "-j$(nproc)"
-          make install_sw install_ssldirs
+        run: .github/build-openssl-win32.sh
         shell: "msys2 {0}"
 
       - name: setup host perl
@@ -164,15 +156,7 @@ jobs:
         with:
           install: make mingw-w64-x86_64-gcc nasm
       - name: install OpenSSL
-        run: |
-          set -eux
-          OPENSSL_VERSION=1_1_1i
-          curl --retry 3 -sSL "https://github.com/openssl/openssl/archive/OpenSSL_$OPENSSL_VERSION.tar.gz" -o openssl.tar.gz
-          tar xzf openssl.tar.gz
-          cd "openssl-OpenSSL_$OPENSSL_VERSION"
-          perl Configure --prefix="$(cygpath "$RUNNER_TOOL_CACHE\perl\${{ matrix.perl }}-thr\x64")" mingw64
-          make "-j$(nproc)"
-          make install_sw
+        run: .github/build-openssl-win32.sh
         shell: "msys2 {0}"
 
       - name: setup host perl
