--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -7,6 +7,7 @@ on:
       - "scripts/darwin/**"
       - "scripts/lib/Devel/**"
       - ".github/workflows/darwin.yml"
+      - ".github/build-openssl-darwin.sh"
   push:
     branches:
       - "releases/*"
