upload win32 binaries to Azure Blob Storage

--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -130,6 +130,9 @@ jobs:
         shell: bash
         working-directory: ${{ runner.temp }}/perl-wer
 
+      - uses: kheiakiyama/install-azcopy-action@v1
+        with:
+          version: "v10"
       - name: upload
         shell: pwsh
         run: |
@@ -138,11 +141,13 @@ jobs:
           7z x s3cli-mini.zip
           $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
           $version = $pkg.version
-          s3cli-mini_windows_amd64/s3cli-mini --region us-east-1 cp --acl public-read perl.zip "s3://shogo82148-actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64.zip"
+          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID" --tenant-id $env:AZCOPY_TENANT_ID
+          azcopy_v10 cp perl.zip "https://setupperl.blob.core.windows.net/actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64.zip"
         env:
           PERL_VERSION: ${{ matrix.perl }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AZCOPY_SPA_APPLICATION_ID: ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
+          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
+          AZCOPY_TENANT_ID: ${{ secrets.AZCOPY_TENANT_ID }}
 
   build-multi-thread:
     runs-on: windows-2019
@@ -219,6 +224,9 @@ jobs:
         shell: bash
         working-directory: ${{ runner.temp }}/perl-wer
 
+      - uses: kheiakiyama/install-azcopy-action@v1
+        with:
+          version: "v10"
       - name: upload
         shell: pwsh
         run: |
@@ -227,8 +235,10 @@ jobs:
           7z x s3cli-mini.zip
           $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
           $version = $pkg.version
-          s3cli-mini_windows_amd64/s3cli-mini --region us-east-1 cp --acl public-read perl.zip "s3://shogo82148-actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64-multi-thread.zip"
+          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID" --tenant-id $env:AZCOPY_TENANT_ID
+          azcopy_v10 cp perl.zip "https://setupperl.blob.core.windows.net/actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64-multi-thread.zip"
         env:
           PERL_VERSION: ${{ matrix.perl }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AZCOPY_SPA_APPLICATION_ID: ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
+          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
+          AZCOPY_TENANT_ID: ${{ secrets.AZCOPY_TENANT_ID }}
