--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -139,7 +139,7 @@ jobs:
           Set-Location ${env:RUNNER_TEMP}
           $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
           $version = $pkg.version
-          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID" --tenant-id $env:AZCOPY_TENANT_ID
+          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID --tenant-id $env:AZCOPY_TENANT_ID
           azcopy_v10 cp perl.zip "https://setupperl.blob.core.windows.net/actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64.zip"
         env:
           PERL_VERSION: ${{ matrix.perl }}
@@ -231,7 +231,7 @@ jobs:
           Set-Location ${env:RUNNER_TEMP}
           $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
           $version = $pkg.version
-          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID" --tenant-id $env:AZCOPY_TENANT_ID
+          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID --tenant-id $env:AZCOPY_TENANT_ID
           azcopy_v10 cp perl.zip "https://setupperl.blob.core.windows.net/actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64-multi-thread.zip"
         env:
           PERL_VERSION: ${{ matrix.perl }}
