--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -130,19 +130,22 @@ jobs:
         shell: bash
         working-directory: ${{ runner.temp }}/perl-wer
 
+      - uses: kheiakiyama/install-azcopy-action@v1
+        with:
+          version: "v10"
       - name: upload
         shell: pwsh
         run: |
           Set-Location ${env:RUNNER_TEMP}
-          Invoke-WebRequest -Uri https://github.com/shogo82148/s3cli-mini/releases/download/v0.0.6/s3cli-mini_windows_amd64.zip -OutFile s3cli-mini.zip
-          7z x s3cli-mini.zip
           $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
           $version = $pkg.version
-          s3cli-mini_windows_amd64/s3cli-mini --region us-east-1 cp --acl public-read perl.zip "s3://shogo82148-actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64.zip"
+          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID --tenant-id $env:AZCOPY_TENANT_ID
+          azcopy_v10 cp perl.zip "https://setupperl.blob.core.windows.net/actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64.zip"
         env:
           PERL_VERSION: ${{ matrix.perl }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AZCOPY_SPA_APPLICATION_ID: ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
+          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
+          AZCOPY_TENANT_ID: ${{ secrets.AZCOPY_TENANT_ID }}
 
   build-multi-thread:
     runs-on: windows-2019
@@ -219,16 +222,19 @@ jobs:
         shell: bash
         working-directory: ${{ runner.temp }}/perl-wer
 
+      - uses: kheiakiyama/install-azcopy-action@v1
+        with:
+          version: "v10"
       - name: upload
         shell: pwsh
         run: |
           Set-Location ${env:RUNNER_TEMP}
-          Invoke-WebRequest -Uri https://github.com/shogo82148/s3cli-mini/releases/download/v0.0.6/s3cli-mini_windows_amd64.zip -OutFile s3cli-mini.zip
-          7z x s3cli-mini.zip
           $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
           $version = $pkg.version
-          s3cli-mini_windows_amd64/s3cli-mini --region us-east-1 cp --acl public-read perl.zip "s3://shogo82148-actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64-multi-thread.zip"
+          azcopy_v10 login --service-principal --application-id $env:AZCOPY_SPA_APPLICATION_ID --tenant-id $env:AZCOPY_TENANT_ID
+          azcopy_v10 cp perl.zip "https://setupperl.blob.core.windows.net/actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64-multi-thread.zip"
         env:
           PERL_VERSION: ${{ matrix.perl }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AZCOPY_SPA_APPLICATION_ID: ${{ secrets.AZCOPY_SPA_APPLICATION_ID }}
+          AZCOPY_SPA_CLIENT_SECRET: ${{ secrets.AZCOPY_SPA_CLIENT_SECRET }}
+          AZCOPY_TENANT_ID: ${{ secrets.AZCOPY_TENANT_ID }}
