--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: scripts/windows/local
-          key: ${{ runner.os }}-sanity-check-perl-${{ steps.perl.outputs.version }}-${{ hashFiles('scripts/darwin/cpanfile.snapshot') }}
+          key: ${{ runner.os }}-sanity-check-perl-${{ steps.perl.outputs.version }}-${{ hashFiles('scripts/windows/cpanfile.snapshot') }}
           restore-keys: ${{ runner.os }}-sanity-check-perl-${{ steps.perl.outputs.version }}-
       - name: sanity check
         run: |
