--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/shogo82148/actions-setup-perl#readme",
   "dependencies": {
+    "@actions/cache": "^1.0.7",
     "@actions/core": "^1.2.7",
+    "@actions/exec": "^1.0.4",
     "@actions/tool-cache": "^1.6.1",
     "semver": "^7.3.5"
   },
