--- a/.github/workflows/test-cpanm.yml
+++ b/.github/workflows/test-cpanm.yml
@@ -56,9 +56,11 @@ jobs:
           install-modules: |
             ExtUtils::MakeMaker
           working-directory: __test__/p5-Test-Module
-      - name: print the version of Module::CPANfile
+      - name: print the version of App::a2p and use it
         run: |
-          perl -MModule::CPANfile -e 'print $Module::CPANfile::VERSION'
+          perl -MApp::a2pN -e 'print $App::a2p::VERSION'
+          echo '$1' | a2p
+
       - name: print the version of ExtUtils::MakeMaker
         run: |
           perl -MExtUtils::MakeMaker -e 'print $ExtUtils::MakeMaker::VERSION'
