fix module name

--- a/.github/workflows/test-cpanm.yml
+++ b/.github/workflows/test-cpanm.yml
@@ -58,7 +58,7 @@ jobs:
           working-directory: __test__/p5-Test-Module
       - name: print the version of App::a2p and use it
         run: |
-          perl -MApp::a2pN -e 'print $App::a2p::VERSION'
+          perl -MApp::a2p -e 'print $App::a2p::VERSION'
           echo '$1' | a2p
 
       - name: print the version of ExtUtils::MakeMaker
