--- a/.github/workflows/test-cpan-installer.yml
+++ b/.github/workflows/test-cpan-installer.yml
@@ -1,8 +1,10 @@
-name: test cpanm
+name: test CPAN module installer
 on:
   pull_request:
     paths:
       - "bin/cpanm"
+      - "bin/cpm"
+      - "bin/carton"
       - "__test__/**"
       - "src/**"
       - "package.json"
@@ -23,6 +25,10 @@ jobs:
           - ubuntu-latest
           - macos-latest
           - windows-latest
+        installer:
+          - cpanm
+          - cpm
+          - carton
         perl:
           - "5" # latest version of Perl 5
           - "5.8.1" # oldest version the original cpanm supports
@@ -52,7 +58,7 @@ jobs:
         uses: ./
         with:
           perl-version: "${{ matrix.perl }}"
-          install-modules-with: cpanm
+          install-modules-with: "${{ matrix.installer }}"
           install-modules: |
             ExtUtils::MakeMaker
           working-directory: __test__/p5-Test-Module
