add `install-modules` option (#686)
* add `install-modules` option

* implement installing with cpanm

* install extra modules

* add working-directory option

* add tests for instaling CPAN modules

* fix the name of option

* move the test to another workflow

* fix the name of steps

* configure environment values

* set full path for cpanm

* trim module names

* install App::a2p instead of Module::CPANfile

* fix module name

* add installers to the build matrix

* fix the name of the workflow

* enable caching npm modules

* fix the job name

* save cache

* implement installing with cpm

* bump cache version

* implement installWithCarton

* use perl installed

* add missing await

* add --show-build-log-on-failure option

* specify env

* skip test of old perl

* check whether cpanfile exists

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,7 @@ name: Main workflow
 on:
   pull_request:
     paths:
+      - "__test__/**"
       - "src/**"
       - "package.json"
       - "package-lock.json"
@@ -33,6 +34,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+
+      - name: Get npm cache directory
+        id: npm-cache
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v2
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - run: npm ci
       - run: npm run build
@@ -106,6 +118,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+
+      - name: Get npm cache directory
+        id: npm-cache
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v2
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - run: npm ci
       - run: npm run build
@@ -182,6 +205,17 @@ jobs:
         with:
           node-version: 12.x
 
+      - name: Get npm cache directory
+        id: npm-cache
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v2
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - run: npm ci
       - run: npm run build
       - run: npm run package
@@ -256,6 +290,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+
+      - name: Get npm cache directory
+        id: npm-cache
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v2
+        with:
+          path: ${{ steps.npm-cache.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - run: npm ci
       - run: npm run build
