--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "actions-setup-perl",
-  "version": "1.11.0",
+  "version": "1.12.0-rc1",
   "description": "",
   "main": "lib/setup-perl.js",
   "scripts": {
