use mingw64 bundled with strawberry perl to build perl

--- a/.github/workflows/win32.yml
+++ b/.github/workflows/win32.yml
@@ -69,7 +69,7 @@ jobs:
 
       - uses: msys2/setup-msys2@v2
         with:
-          install: make mingw-w64-x86_64-gcc mingw-w64-x86_64-headers-git nasm
+          install: make mingw-w64-x86_64-gcc nasm
       - name: install OpenSSL
         run: .github/build-openssl-win32.sh
         shell: "msys2 {0}"
