--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,7 +95,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - macos-11.0
+          - macos-11
           - macos-10.15
         multi-thread:
           - false
@@ -170,6 +170,7 @@ jobs:
       matrix:
         os:
           - windows-2019
+          - windows-2022
         multi-thread:
           - false
           - true
