ignore patch releases of @types/node

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,5 +4,8 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      time: "18:27"
     open-pull-requests-limit: 10
+    ignore:
+      # update too often, ignore patch releases
+      - dependency-name: "@types/node"
+        update-types: ["version-update:semver-patch"]
