--- a/.github/workflows/update-cpm.yml
+++ b/.github/workflows/update-cpm.yml
@@ -28,6 +28,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ steps.generate_token.outputs.token }}
+          ref: main
+          fetch-depth: 0
 
       - name: update cpanfile.snapshot
         run: make update
